# course_work_2

./: README.md  pyproject.toml
data/: vacancies.json
src/: job_filter.py
tests/: test_saving_json.py
