[tool.poetry]
name = "course-work-2"
version = "0.1.0"
description = ""
authors = ["Yauheni Lampe <spakv49@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"
flake8 = "^7.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'test_*'

[tool.black]
line-length = 119

# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119
